# test_parsers

./: README.md  decorator.py  dto.py  main.py  parser.py  pyproject.toml
asynchron/: counter.txt  dto.py  main.py  parser.py
fastapi_parser/: counter.txt  main.py  parser.py
multiproc/: main.py  parser.py
multithread/: parser.py
synchron/: counter.txt  decorator.py  dto.py  main.py  parser.py
synchron/test/: test.py
